--- a/resources/views/layout/_banner.antlers.html
+++ b/resources/views/layout/_banner.antlers.html
@@ -17,8 +17,8 @@
         </div>
         <div class="fluid-container">
             <div
-                class="rfs:p-8 space-y-2 inline-flex -translate-y-1/2 bg-primary-light z-10 group-hover:-translate-y-1/3 duration-500 animate flex-col space-y-4 max-w-2xl transform skew-x-caruso">
-                <div class="-skew-x-caruso">
+                class="rfs:p-8 space-y-2 inline-flex -translate-y-1/2 bg-primary-light -translate-x-4 z-10 group-hover:-translate-y-1/3 duration-500 animate flex-col space-y-4 max-w-2xl transform">
+                <div>
                 {{ partial:typography/h1 :content="banner_title" }}
                 {{ partial:typography/p :content="banner_description" }}
                 </div>
