--- a/resources/views/page_builder/_references.antlers.html
+++ b/resources/views/page_builder/_references.antlers.html
@@ -8,8 +8,8 @@
     </div>
     <div class="grid md:grid-cols-3 rfs:gap-8 w-full ">
         {{ entries }}
-            <article class="flex flex-col hover:-translate-y-2 duration-500 animate shadow-xl bg-secondary-light  skew-x-caruso overflow-hidden">
-                <a href="{{ url }}" class="aspect-w-12 aspect-h-7 -skew-x-caruso w-[120%] -ml-[10%]">
+            <article class="flex flex-col hover:-translate-y-2 duration-500 animate shadow-xl bg-secondary-light overflow-hidden">
+                <a href="{{ url }}" class="aspect-w-12 aspect-h-7  w-[120%] -ml-[10%]">
                     {{ partial:components/picture :image="images.0" class="w-full" cover="true" lazy="true" sizes="
                     {{switch(
   (size == 'md') => '(min-width: 768px) 55vw, 90vw',
@@ -19,7 +19,7 @@
                     " }}
                 </a>
                 <div class="rfs:p-8 space-y-2 z-10 ">
-                                <div class="-skew-x-caruso">
+                                <div class="">
 
                     {{ partial:typography/h3 :content="title" }}
                     {{ partial:typography/p :content="description" class="text-sm" }}
