--- a/resources/views/layout/_banner.antlers.html
+++ b/resources/views/layout/_banner.antlers.html
@@ -1,29 +1,29 @@
 {{#
-    @name Banner
-    @desc The sites banner rendered on each page.
+@name Banner
+@desc The sites banner rendered on each page.
 #}}
 
 <!-- /layout/_banner.antlers.html -->
 {{ if banner_image }}
-    <section class="w-full h-[calc(90vh-12rem)] mb-24">
-        <div class="h-full w-full">
-            {{ partial:components/picture :image="banner_image" class="w-full" cover="true" lazy="true" sizes="
-                       {{switch(
-  (size == 'md') => '(min-width: 768px) 55vw, 90vw',
-  (size == 'lg') => '(min-width: 768px) 75vw, 90vw',
-  (size == 'xl') => '100vw',
-  () => '100vw')}}
-                       " }}
-        </div>
-        <div class="fluid-container">
-            <div
-                class="rfs:p-8 space-y-2 inline-flex -translate-y-1/2 bg-primary-light z-10 group-hover:-translate-y-1/3 duration-500 animate flex-col space-y-4 max-w-2xl transform">
-                <div>
-                {{ partial:typography/h1 :content="banner_title" }}
+<section class="w-full  flex flex-col h-[calc(90vh-12rem)] rfs:mb-24">
+    <div class="h-full w-full flex-1">
+        {{ partial:components/picture :image="banner_image" class="w-full" cover="true" lazy="true" sizes="
+        {{switch(
+        (size == 'md') => '(min-width: 768px) 55vw, 90vw',
+        (size == 'lg') => '(min-width: 768px) 75vw, 90vw',
+        (size == 'xl') => '100vw',
+        () => '100vw')}}
+        " }}
+    </div>
+    <div class="fluid-container">
+        <div
+            class="-mx-8 md:mx-auto rfs:p-8 space-y-4 flex md:inline-flex md:-translate-y-1/2 bg-primary-light z-10 group-hover:-translate-y-1/3 duration-500 animate flex-col space-y-4 md:max-w-2xl transform">
+            <div>
+                {{ partial:typography/h1 :content="banner_title" class="mb-2" }}
                 {{ partial:typography/p :content="banner_description" }}
-                </div>
             </div>
         </div>
-    </section>
+    </div>
+</section>
 {{ /if }}
 <!-- End: /layout/_banner.antlers.html -->
