--- a/resources/views/navigation/_main_desktop.antlers.html
+++ b/resources/views/navigation/_main_desktop.antlers.html
@@ -72,7 +72,7 @@
             </li>
         {{ /nav:main }}
             <li>
-                {{ partial:components/button :type="configuration:header_button_link_type" :label="configuration:header_button_label" :entry="configuration:header_button_entry" class="border-secondary text-secondary" }}
+                {{ partial:components/button type="entry" :label="configuration:header_button_label" :entry="configuration:contact_page" class="border-secondary text-secondary" }}
             </li>
     </ul>
 
