--- a/resources/views/components/_button.antlers.html
+++ b/resources/views/components/_button.antlers.html
@@ -1,37 +1,39 @@
 {{#
-	@name Button attributes
-	@desc A single button component. Faux is used when a button is displayed inside a link (for example in link blocks).
-    @param* label The caption label.
-    @param as The wrapping element. Defaults to `a`.
-    @param button_type `Inline` if the button needs to be rendered as an inline button.
-    @param faux Boolean. For faux button wrapped in an actual button/anchor.
-    @param inverted Boolean. When the button needs inverted styles.
+@name Button attributes
+@desc A single button component. Faux is used when a button is displayed inside a link (for example in link blocks).
+@param* label The caption label.
+@param as The wrapping element. Defaults to `a`.
+@param button_type `Inline` if the button needs to be rendered as an inline button.
+@param faux Boolean. For faux button wrapped in an actual button/anchor.
+@param inverted Boolean. When the button needs inverted styles.
 #}}
 
 <!-- /components/_button.antlers.html -->
 {{ if label }}
-    <{{ as or 'a' }}
-        {{ slot:attributes }}
-        class="
-            font-bold focus:outline-none focus-visible:ring focus-visible:ring-offset-2
-            {{ if button_type === 'inline' }}
-                underline motion-safe:transition
-                {{ inverted
-                    ? 'text-neutral focus-visible:ring-white'
-                    : 'text-primary focus-visible:ring-primary'
-                }}
-            {{ else }}
-                inline-flex items-center py-3 px-4 border-4 leading-none uppercase tracking-widest text-sm no-underline select-none whitespace-nowrap motion-safe:transition
-                {{ inverted
-                    ? 'border-neutral text-neutral focus-visible:ring-neutral'
-                    : 'border-primary text-primary focus-visible:ring-primary'
-                }}
-            {{ /if }}
-            {{ class }}
-        "
-        {{ !faux ?= { partial:snippets/button_attributes } }}
-    >
-        {{ link_type == 'email' ? { label | obfuscate_email } : label }}
-    </{{ as or 'a' }}>
+<{{ as or 'a' }}
+{{ slot:attributes }}
+class="
+font-bold focus:outline-none focus-visible:ring focus-visible:ring-offset-2
+{{ if button_type === 'inline' }}
+underline motion-safe:transition
+{{ inverted
+? 'text-neutral focus-visible:ring-white'
+: 'text-primary focus-visible:ring-primary'
+}}
+{{ else }}
+inline-flex items-center py-3 px-4 border-4 leading-none uppercase tracking-widest text-sm no-underline select-none whitespace-nowrap motion-safe:transition
+{{ inverted
+? 'border-neutral text-neutral focus-visible:ring-neutral'
+: 'border-primary text-primary focus-visible:ring-primary'
+}}
+{{ /if }}
+{{ class }}
+"
+{{ trackGoal ?= "onclick='window.fathom.trackGoal('{trackGoal}', 0)'" }}
+
+{{ !faux ?= { partial:snippets/button_attributes } }}
+>
+{{ link_type == 'email' ? { label | obfuscate_email } : label }}
+</{{ as or 'a' }}>
 {{ /if }}
 <!-- End: /components/_button.antlers.html -->
