--- a/resources/views/default.antlers.html
+++ b/resources/views/default.antlers.html
@@ -4,7 +4,7 @@
 #}}
 
 <!-- /default.antlers.html -->
-<main class="outer-grid" id="content">
+<main class="outer-grid pb-0" id="content">
     {{ page_builder scope="block" }}
         {{ partial src="page_builder/{type}" }}
     {{ /page_builder }}
