--- a/resources/views/page_builder/_references.antlers.html
+++ b/resources/views/page_builder/_references.antlers.html
@@ -8,25 +8,28 @@
     </div>
     <div class="grid md:grid-cols-3 rfs:gap-8 w-full ">
         {{ entries }}
-            <article class="flex flex-col hover:-translate-y-2 duration-500 animate shadow-xl bg-secondary-light overflow-hidden">
-                <a href="{{ url }}" class="aspect-w-12 aspect-h-7  w-[120%] -ml-[10%]">
-                    {{ partial:components/picture :image="images.0" class="w-full" cover="true" lazy="true" sizes="
-                    {{switch(
-  (size == 'md') => '(min-width: 768px) 55vw, 90vw',
-  (size == 'lg') => '(min-width: 768px) 75vw, 90vw',
-  (size == 'xl') => '90vw',
-  () => '100vw')}}
-                    " }}
-                </a>
-                <div class="rfs:p-8 space-y-2 z-10 ">
-                                <div class="">
+        <article
+            class="flex flex-col hover:-translate-y-2 duration-500 animate bg-secondary-light overflow-hidden">
+            <a href="{{ url }}" class="aspect-w-12 aspect-h-7">
+                {{ partial:components/picture :image="images.0" class="w-full" cover="true" lazy="true" sizes="
+                {{switch(
+                (size == 'md') => '(min-width: 768px) 55vw, 90vw',
+                (size == 'lg') => '(min-width: 768px) 75vw, 90vw',
+                (size == 'xl') => '90vw',
+                () => '100vw')}}
+                " }}
+            </a>
+            <div class="rfs:p-8 space-y-2 z-10 ">
 
-                    {{ partial:typography/h3 :content="title" }}
+
+                    {{ partial:typography/h2 as="h3" :content="title" }}
+                    {{ partial:components/spacer }}
                     {{ partial:typography/p :content="description" class="text-sm" }}
-                    </div>
-                </div>
-            </article>
+
+            </div>
+        </article>
         {{ /entries }}
     </div>
-    {{ partial:components/button :type="configuration:header_button_link_type" label="Mehr sehen" :entry="configuration:header_button_entry" class="border-neutral text-neutral" inverted="true" }}
+    {{ partial:components/button :type="configuration:header_button_link_type" label="Mehr sehen"
+    :entry="configuration:header_button_entry" class="border-neutral text-neutral" inverted="true" }}
 </section>
