--- a/resources/views/typography/_h2.antlers.html
+++ b/resources/views/typography/_h2.antlers.html
@@ -8,5 +8,5 @@
 #}}
 
 <!-- /typography/_h2.antlers.html -->
-<{{ as or 'h2' }} class="rfs:text-3xl rfs:md:text-4xl font-bold tracking-tight uppercase  {{ color or 'text-neutral' }} {{ class }}">{{ content | nl2br }}</{{ as or 'h2' }}>
+<{{ as or 'h2' }} class="rfs:text-3xl rfs:md:text-4xl font-bold tracking-tight uppercase max-w-2xl  {{ color or 'text-neutral' }} {{ class }}">{{ content | nl2br }}</{{ as or 'h2' }}>
 <!-- End: /typography/_h2.antlers.html -->
