--- a/resources/views/typography/_h3.antlers.html
+++ b/resources/views/typography/_h3.antlers.html
@@ -8,5 +8,5 @@
 #}}
 
 <!-- /typography/_h3.antlers.html -->
-<{{ as or 'h3' }} class="rfs:2xl text-base font-bold leading-wider {{ color or 'text-neutral' }} {{ class }}">{{ content | nl2br }}</{{ as or 'h3' }}>
+<{{ as or 'h3' }} class="rfs:2xl text-base font-bold leading-wider max-w-2xl {{ color or 'text-neutral' }} {{ class }}">{{ content | nl2br }}</{{ as or 'h3' }}>
 <!-- End: /typography/_h3.antlers.html -->
