--- a/resources/views/layout/_footer.antlers.html
+++ b/resources/views/layout/_footer.antlers.html
@@ -23,7 +23,7 @@
 <footer class="w-full mt-auto">
     <div class="bg-black">
 
-        <div class=" text-white text-sm md:grid md:grid-cols-3 px-8 py-16 fluid-container">
+        <div class=" text-white text-sm md:grid md:grid-cols-3 space-y-4 px-8 py-16 fluid-container">
             <div class="space-y-4">
                 {{ partial:typography/h3 class="mb-4" content="Adresse" color="text-white" }}
                 <p>
