--- a/resources/views/layout/_footer.antlers.html
+++ b/resources/views/layout/_footer.antlers.html
@@ -11,8 +11,8 @@
         {{ heroicons:outline:chat-alt-2 class="h-24 stroke-current w-24" }}
         <div
             class="flex flex-col justify-center items-center md:justify-start md:items-start text-center md:text-left ">
-            {{ partial:typography/h2 class="mb-4" content="Gerne beraten wir Sie persönlich, um das geeignete Setting
-            für Ihren Event zu finden." }}
+            {{ partial:typography/h2 class="mb-4" content="Gerne beraten wir Sie persönlich, um für Sie die beste Lösung
+            zu finden." }}
             {{ partial:components/button :type="configuration:header_button_link_type"
             :label="configuration:header_button_label" :entry="configuration:header_button_entry" class="border-neutral
             text-neutral inline" inverted="true" }}
