--- a/resources/views/layout/_footer.antlers.html
+++ b/resources/views/layout/_footer.antlers.html
@@ -43,6 +43,13 @@
                     7:30 - 13:00 Uhr
                 </p>
             </div>
+            <div class="space-y-4">
+                <ul>
+                    {{ nav:footer max_depth="1" include_home="false" }}
+                    <li><a href="{{url}}">{{title}}</a></li>
+                    {{ /nav:footer }}
+                </ul>
+            </div>
         </div>
     </div>
     <div
