--- a/resources/views/layout.antlers.html
+++ b/resources/views/layout.antlers.html
@@ -17,6 +17,7 @@
     </head>
     <body class="flex flex-col min-h-screen bg-white selection:bg-primary selection:text-white pt-24">
         {{ partial:snippets/noscript }}
+        {{ partial:components/get_in_touch }}
         {{ partial:navigation/skip_to_content }}
         {{ partial:components/toolbar }}
         {{ yield:seo_body }}
