--- a/resources/views/layout/_footer.antlers.html
+++ b/resources/views/layout/_footer.antlers.html
@@ -13,8 +13,8 @@
             class="flex flex-col justify-center items-center md:justify-start md:items-start text-center md:text-left ">
             {{ partial:typography/h2 class="mb-4" content="Gerne beraten wir Sie persönlich, um für Sie die beste Lösung
             zu finden." }}
-            {{ partial:components/button :type="configuration:header_button_link_type"
-            :label="configuration:header_button_label" :entry="configuration:header_button_entry" class="border-neutral
+            {{ partial:components/button label="{ configuration:header_button_label }" link_type="tel" tel="{
+            configuration:telephone }" class="border-neutral
             text-neutral inline" inverted="true" }}
         </div>
     </div>
@@ -23,7 +23,8 @@
 <footer class="w-full mt-auto">
     <div class="bg-black">
 
-        <div class=" text-white text-sm md:grid md:grid-cols-3 space-y-4 px-8 py-16 fluid-container">
+        <div
+            class=" text-white text-sm md:grid md:grid-cols-3 space-y-4 md:space-y-0 px-8 py-16 fluid-container justify-start items-start">
             <div class="space-y-4">
                 {{ partial:typography/h3 class="mb-4" content="Adresse" color="text-white" }}
                 <p>
@@ -31,9 +32,13 @@
                     48165 Münster
                 </p>
                 <p>
-                    Tel. +49 2501 26 22 23 <br>
+                    <a href="tel: {{
+            configuration:telephone }}">Tel. {{
+                        configuration:telephone }}</a><br>
                     Fax: +49 2501 92 87 75 <br>
-                    info@caruso-maler.de
+                    <a href="mailto: {{
+            configuration:email }}"> {{
+                        configuration:email }}</a>
                 </p>
             </div>
             <div class="space-y-4">
