--- a/resources/views/components/_get_in_touch.antlers.html
+++ b/resources/views/components/_get_in_touch.antlers.html
@@ -21,7 +21,7 @@
         x-transition.scale.10
         x-transition.duration.200ms
 
-    > {{ heroicons:outline:chat-alt-2 class="h-12 stroke-current text-neutral
+    > {{ heroicons:outline:phone class="h-12 stroke-current text-neutral
         w-12" }}
     </button>
 
