--- a/resources/views/layout/_footer.antlers.html
+++ b/resources/views/layout/_footer.antlers.html
@@ -8,7 +8,7 @@
 <section class="outer-grid bg-primary-light">
 
     <div class="fluid-container flex flex-col md:flex-row gap-8 items-center justify-center">
-        {{ heroicons:outline:chat-alt-2 class="h-24 stroke-current w-24" }}
+        {{ heroicons:outline:phone class="h-24 stroke-current w-24" }}
         <div
             class="flex flex-col justify-center items-center md:justify-start md:items-start text-center md:text-left ">
             {{ partial:typography/h2 class="mb-4" content="Gerne beraten wir Sie persönlich, um für Sie die beste Lösung
