--- a/resources/views/layout/_footer.antlers.html
+++ b/resources/views/layout/_footer.antlers.html
@@ -21,7 +21,7 @@
 </section>
 {{ /if }}
 <footer class="w-full mt-auto">
-    <div class="bg-black">
+    <div class="bg-neutral">
 
         <div
             class=" text-white text-sm md:grid md:grid-cols-3 space-y-4 md:space-y-0 px-8 py-16 fluid-container justify-start items-start">
